--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/standalone": "^7.27.2",
     "@handsontable/react-wrapper": "^15.3.0",
+    "@types/papaparse": "^5.3.16",
     "lucide-react": "^0.510.0",
     "next": "14.2.25",
+    "papaparse": "^5.5.2",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/babel__standalone": "^7.1.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
