--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.2.25",
     "papaparse": "^5.5.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@types/babel__standalone": "^7.1.9",
