--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/standalone": "^7.27.2",
     "@handsontable/react-wrapper": "^15.3.0",
     "@types/papaparse": "^5.3.16",
+    "hyperformula": "^3.0.0",
     "lucide-react": "^0.510.0",
     "next": "14.2.25",
     "papaparse": "^5.5.2",
