--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@babel/standalone": "^7.27.2",
     "@handsontable/react-wrapper": "^15.3.0",
     "@types/papaparse": "^5.3.16",
+    "@types/recharts": "^2.0.1",
     "hyperformula": "^3.0.0",
     "lucide-react": "^0.510.0",
     "next": "14.2.25",
     "papaparse": "^5.5.2",
     "react": "^18",
     "react-dom": "^18",
+    "recharts": "^2.15.3",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
