--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@handsontable/react-wrapper": "^15.3.0",
     "@types/papaparse": "^5.3.16",
     "@types/recharts": "^2.0.1",
+    "@types/styled-components": "^5.1.34",
     "hyperformula": "^3.0.0",
     "lucide-react": "^0.510.0",
     "next": "14.2.25",
@@ -20,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.15.3",
+    "styled-components": "^6.1.18",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
