--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/papaparse": "^5.3.16",
     "@types/recharts": "^2.0.1",
     "@types/styled-components": "^5.1.34",
+    "@types/xlsx": "^0.0.36",
     "hyperformula": "^3.0.0",
     "lucide-react": "^0.510.0",
     "next": "14.2.25",
@@ -22,6 +23,7 @@
     "react-dom": "^18",
     "recharts": "^2.15.3",
     "styled-components": "^6.1.18",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
