--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hyperformula": "^3.0.0",
     "lucide-react": "^0.510.0",
     "next": "14.2.25",
+    "openai": "^4.100.0",
     "papaparse": "^5.5.2",
     "react": "^18",
     "react-dom": "^18",
