--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/xlsx": "^0.0.36",
     "hyperformula": "^3.0.0",
     "lucide-react": "^0.510.0",
+    "nanoid": "^5.1.5",
     "next": "14.2.25",
     "openai": "^4.100.0",
     "papaparse": "^5.5.2",
