--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/recharts": "^2.0.1",
     "@types/styled-components": "^5.1.34",
     "@types/xlsx": "^0.0.36",
+    "firebase": "^11.8.1",
     "handsontable": "^15.3.0",
     "hyperformula": "^3.0.0",
     "lucide-react": "^0.510.0",
