--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/styled-components": "^5.1.34",
     "@types/xlsx": "^0.0.36",
     "@vercel/analytics": "^1.5.0",
+    "clsx": "^2.1.1",
     "firebase": "^11.8.1",
     "handsontable": "^15.3.0",
     "hyperformula": "^3.0.0",
@@ -28,6 +29,7 @@
     "react-dom": "^18",
     "recharts": "^2.15.3",
     "styled-components": "^6.1.18",
+    "tailwind-merge": "^3.3.0",
     "xlsx": "^0.18.5",
     "zustand": "^5.0.4"
   },
@@ -36,10 +38,11 @@
     "@types/node": "^20",
     "@types/react": "^18.3.21",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "14.2.25",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   }
 }
