--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/styled-components": "^5.1.34",
     "@types/xlsx": "^0.0.36",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
     "firebase": "^11.8.1",
     "handsontable": "^15.3.0",
