--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/papaparse": "^5.3.16",
     "@types/recharts": "^2.0.1",
     "@types/styled-components": "^5.1.34",
+    "@types/uuid": "^10.0.0",
     "@types/xlsx": "^0.0.36",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
@@ -33,6 +34,7 @@
     "recharts": "^2.15.3",
     "styled-components": "^6.1.18",
     "tailwind-merge": "^3.3.0",
+    "uuid": "^11.1.0",
     "xlsx": "^0.18.5",
     "zustand": "^5.0.4"
   },
