--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/standalone": "^7.27.6",
     "@google/generative-ai": "^0.24.1",
+    "@handsontable/react": "^15.3.0",
     "@handsontable/react-wrapper": "^15.3.0",
     "@types/papaparse": "^5.3.16",
     "@types/recharts": "^2.0.1",
