--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "@google/generative-ai": "^0.24.1",
     "@handsontable/react": "^15.3.0",
     "@handsontable/react-wrapper": "^15.3.0",
+    "@mescius/spread-sheets": "^18.1.4",
+    "@mescius/spread-sheets-charts": "^18.1.4",
+    "@mescius/spread-sheets-io": "^18.1.4",
+    "@mescius/spread-sheets-react": "^18.1.4",
+    "@mescius/spread-sheets-resources-ko": "^18.1.4",
+    "@mescius/spread-sheets-shapes": "^18.1.4",
     "@types/papaparse": "^5.3.16",
     "@types/recharts": "^2.0.1",
     "@types/styled-components": "^5.1.34",
