--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "papaparse": "^5.5.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.15.3",
+    "remark-gfm": "^4.0.1",
     "styled-components": "^6.1.18",
     "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0",
