--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-markdown": "^10.1.0",
     "recharts": "^2.15.3",
     "remark-gfm": "^4.0.1",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.18",
     "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0",
