--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "next": "14.2.25",
     "openai": "^4.100.0",
     "papaparse": "^5.5.2",
+    "posthog-js": "^1.273.1",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^10.1.0",
